# adv_mla_at1_14229898

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: gb_classifier.joblib  log_reg_1.joblib  log_reg_tune.joblib  logistic.joblib  scaler.joblib  xgboost.joblib  xgboost_tune.joblib
notebooks/: chingpayakmon_narongvat-14229898-week1_1.preprocessed.ipynb  chingpayakmon_narongvat-14229898-week1_2.baseline.ipynb  chingpayakmon_narongvat-14229898-week1_3.XGBoost-Copy1.ipynb  chingpayakmon_narongvat-14229898-week1_3.logistic-Copy1.ipynb  chingpayakmon_narongvat-14229898-week1_3.logistic.ipynb  chingpayakmon_narongvat-14229898-week1_5.XGBoost.ipynb  chingpayakmon_narongvat-14229898-week1_baseline.ipynb  chingpayakmon_narongvat-14229898-week2_4.random-forest.ipynb  chingpayakmon_narongvat-14229898-week2_5.xgboost.ipynb  chingpayakmon_narongvat-14229898-week3_2.baseline.ipynb  chingpayakmon_narongvat-14229898-week3_3.logistic.ipynb  chingpayakmon_narongvat-14229898-week3_4.random-forest.ipynb  chingpayakmon_narongvat-14229898-week3_5.xgboost.ipynb  chingpayakmon_narongvat-14229898-week3_6.gradient_boosting.ipynb  chingpayakmon_narongvat-14229898-week3_7.adaboost.ipynb  submission1
src/data/: data_preprocessing.py
src/models/: predict_model.py
src/visualization/: data_visualization.py  plot_graph.py  submission_file.py  visualize.py
