[tool.poetry]
name = "adv-mla-2023-at1-14229898"
version = "0.1.0"
description = ""
authors = ["chuannarongvat <narongvat.chingpayakmon@student.uts.edu.au>"]
readme = "README.md"
packages = [{include = "adv_mla_2023_at1_14229898"}]

[tool.poetry.dependencies]
python = "3.9.13"
pandas = "2.0.1"
jupyterlab = "3.6.3"
scikit-learn = "1.2.2"
missingno = "^0.5.2"
category-encoders = "^2.6.2"
imbalanced-learn = "^0.11.0"
joblib = "^1.3.2"
xgboost = "^1.7.6"
hyperopt = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
